# WEB_server

./: .gitignore  hrsv.cpp  hrsv.hpp  miniServer.cpp  readme.md
Networking/: CMakeLists.txt  hrslibNetworking.cpp  hrslibNetworking.hpp  index.html  main.cpp  makefile
Networking/html/: home.html  index.html
Networking/servers/: hrslibServer.hpp  liveServer.cpp  liveServer.hpp  simpleServer.cpp  simpleServer.hpp  test.cpp  testServer.cpp  testServer.hpp  testliveServer.cpp
Networking/sockets/: bindingSocket.cpp  bindingSocket.hpp  connectingSocket.cpp  connectingSocket.hpp  hrslibSocket.cpp  hrslibSocket.hpp  index.html  listeningSocket.cpp  listeningSocket.hpp  main.cpp  makefile  simpleSocket.cpp  simpleSocket.hpp
